crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_creation_whose_nonce_cannot_be_bumped_keeps_nothing.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&outcomes"
---
{
  "a creation with the nonce check off": {
    "result": {
      "kind": "success",
      "reason": "Return",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 24000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 24000,
      "gas_used": 51280
    },
    "result_gas": {
      "total_gas_spent": 51280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000d00000": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a deposit, no limit": {
    "result": {
      "kind": "success",
      "reason": "Return",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 24000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 24000,
      "gas_used": 24000
    },
    "result_gas": {
      "total_gas_spent": 24000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 18446744073709551615,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "a deposit, under the limit": {
    "result": {
      "kind": "success",
      "reason": "Return",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 24000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 24000,
      "gas_used": 24000
    },
    "result_gas": {
      "total_gas_spent": 24000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 18446744073709551615,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
