crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_deposit_its_depositor_cannot_fund_fails_as_without_a_limit.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&outcomes"
---
{
  "a call, no limit": {
    "result": {
      "kind": "halt",
      "reason": "FailedDeposit",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1367200,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 0,
      "gas_used": 1367200
    },
    "result_gas": {
      "total_gas_spent": 1367200,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "a call, under the limit": {
    "result": {
      "kind": "halt",
      "reason": "FailedDeposit",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1367200,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 0,
      "gas_used": 1367200
    },
    "result_gas": {
      "total_gas_spent": 1367200,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "a creation, no limit": {
    "result": {
      "kind": "halt",
      "reason": "FailedDeposit",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1367200,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 0,
      "gas_used": 1367200
    },
    "result_gas": {
      "total_gas_spent": 1367200,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "a creation, under the limit": {
    "result": {
      "kind": "halt",
      "reason": "FailedDeposit",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 1367200,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 0,
      "gas_used": 1367200
    },
    "result_gas": {
      "total_gas_spent": 1367200,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
