crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_deposits_value_is_logged_and_its_mint_is_not.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&by_case([(\"valued\", OutcomeView::new(&outcome)),\n(\"minted\", OutcomeView::new(&minted)),\n(\"stopped\", OutcomeView::new(&stopped)),])"
---
{
  "minted": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 183600,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 198600
    },
    "result_gas": {
      "total_gas_spent": 198600,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d00003": "unchanged",
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "stopped": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(DataSize, 509)",
      "output": "0x84b90267000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001fd",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 21000,
      "state": 183600,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 204600
    },
    "result_gas": {
      "total_gas_spent": 204600,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "DataSize",
      "limit": 509,
      "used": 510
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "valued": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000d000de",
            "0x0000000000000000000000000000000000000000000000000000000000d00003"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000190"
        }
      ]
    },
    "gas": {
      "regular": 21000,
      "state": 183600,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 204600
    },
    "result_gas": {
      "total_gas_spent": 204600,
      "state_gas_spent": 183600,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 510,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000d00003": {
        "balance": "0x190",
        "nonce": 0,
        "code_hash": "0xbc36789e7a1e281436464229828f817d6612f7b477d66591ff96a9e064bcc98a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d000de": {
        "balance": "0x258",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
