crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_failure_takes_each_sites_transfer_log_back.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&outcomes"
---
{
  "Call at 20000000": "success Return; stop -; regular 26962 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 54242; data_size 310 write_records 0; logs 0 accounts 6",
  "Call at 300000000": "success Return; stop -; regular 26962 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 54242; data_size 310 write_records 0; logs 0 accounts 6",
  "CallToPrecompile at 20000000": "success Return; stop -; regular 49477 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 76757; data_size 310 write_records 0; logs 0 accounts 6",
  "CallToPrecompile at 300000000": "success Return; stop -; regular 49477 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 76757; data_size 310 write_records 0; logs 0 accounts 6",
  "CallWithoutCode at 20000000": "success Return; stop -; regular 51962 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 79242; data_size 310 write_records 0; logs 0 accounts 6",
  "CallWithoutCode at 300000000": "success Return; stop -; regular 51962 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 79242; data_size 310 write_records 0; logs 0 accounts 6",
  "Create at 20000000": "success Return; stop -; regular 49655 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 76935; data_size 310 write_records 0; logs 0 accounts 6",
  "Create at 300000000": "success Return; stop -; regular 49655 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 76935; data_size 310 write_records 0; logs 0 accounts 6",
  "Create2 at 20000000": "success Return; stop -; regular 49658 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 76938; data_size 310 write_records 0; logs 0 accounts 6",
  "Create2 at 300000000": "success Return; stop -; regular 49658 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 76938; data_size 310 write_records 0; logs 0 accounts 6",
  "SelfDestruct at 20000000": "success Return; stop -; regular 27865 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 55145; data_size 310 write_records 0; logs 0 accounts 6",
  "SelfDestruct at 300000000": "success Return; stop -; regular 27865 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 55145; data_size 310 write_records 0; logs 0 accounts 6",
  "TxEndowment at 20000000": "revert -; stop -; regular 24054 state 0 history 27544 history_bytes 313 reservoir_remaining 0 floor 24192 gas_used 51598; data_size 313 write_records 0; logs 0 accounts 5",
  "TxEndowment at 300000000": "revert -; stop -; regular 24054 state 0 history 27544 history_bytes 313 reservoir_remaining 99972456 floor 24192 gas_used 51598; data_size 313 write_records 0; logs 0 accounts 5",
  "TxValue at 20000000": "revert -; stop -; regular 21004 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 21000 gas_used 48284; data_size 310 write_records 0; logs 0 accounts 5",
  "TxValue at 300000000": "revert -; stop -; regular 21004 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 21000 gas_used 48284; data_size 310 write_records 0; logs 0 accounts 5"
}
