crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_start_an_inspector_rewrites_is_refused_on_the_input_it_leaves.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "success",
    "reason": "Return",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 24331,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 51611
  },
  "result_gas": {
    "total_gas_spent": 51611,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000000000": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00000": {
      "balance": "0xde0b6b3a7640000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00002": {
      "balance": "0x3e8",
      "nonce": 0,
      "code_hash": "0x2c3c76bd2ef4698fe1df443b5871bad45ed849e15115da711f3d3bf6d89f6811",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001b": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    }
  }
}
