crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_system_transactions_value_is_logged_and_no_limit_stops_it.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&outcomes"
---
{
  "valueless": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 15000
    },
    "result_gas": {
      "total_gas_spent": 15000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x6342000000000000000000000000000000000001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xbc36789e7a1e281436464229828f817d6612f7b477d66591ff96a9e064bcc98a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0xa887dcb9d5f39ef79272801d05abdf707cfbbd1d": {
        "balance": "0x3e8",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "with value, every data-size limit at zero": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x000000000000000000000000a887dcb9d5f39ef79272801d05abdf707cfbbd1d",
            "0x0000000000000000000000006342000000000000000000000000000000000001"
          ],
          "data": "0x00000000000000000000000000000000000000000000000000000000000003e8"
        }
      ]
    },
    "gas": {
      "regular": 21000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 21000
    },
    "result_gas": {
      "total_gas_spent": 21000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 510,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x6342000000000000000000000000000000000001": {
        "balance": "0x3e8",
        "nonce": 0,
        "code_hash": "0xbc36789e7a1e281436464229828f817d6612f7b477d66591ff96a9e064bcc98a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0xa887dcb9d5f39ef79272801d05abdf707cfbbd1d": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "with value, no limit": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x000000000000000000000000a887dcb9d5f39ef79272801d05abdf707cfbbd1d",
            "0x0000000000000000000000006342000000000000000000000000000000000001"
          ],
          "data": "0x00000000000000000000000000000000000000000000000000000000000003e8"
        }
      ]
    },
    "gas": {
      "regular": 21000,
      "state": 0,
      "history": 0,
      "history_bytes": 0,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 21000
    },
    "result_gas": {
      "total_gas_spent": 21000,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 510,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x6342000000000000000000000000000000000001": {
        "balance": "0x3e8",
        "nonce": 0,
        "code_hash": "0xbc36789e7a1e281436464229828f817d6612f7b477d66591ff96a9e064bcc98a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0xa887dcb9d5f39ef79272801d05abdf707cfbbd1d": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
