crates/mega-evm/tests/satin/snapshots/satin__transfer_logs__a_value_call_its_caller_cannot_fund_is_charged_nothing.snap
---
source: crates/mega-evm/tests/satin/transfer_logs.rs
expression: "&BTreeMap::from([(\"refused\", OutcomeView::new(&refused)),\n(\"funded\", OutcomeView::new(&funded)),])"
---
{
  "funded": {
    "result": {
      "kind": "halt",
      "reason": "Base(OutOfGas(Basic))",
      "output": null,
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 171000,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 198280
    },
    "result_gas": {
      "total_gas_spent": 198280,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "refused": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 24318,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 51598
    },
    "result_gas": {
      "total_gas_spent": 51598,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00002": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
